added remove dir after uploading files to storage

--- a/files-copy/index.html
+++ b/files-copy/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/files/style.css" />
-    <title>Web3.storage website</title>
+    <title>Web3 static website</title>
   </head>
   <body>
     <header>
@@ -24,7 +24,7 @@
       <h1>i love Cheese on pizza</h1>
       <br />
       <img
-        src="/files/img/iu.jpeg"
+        src="/files/img/pizza.jpeg"
         alt="a slice of pizza with many toppings on a plate"
       />
     </main>
